# Trempoline

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeSettings.json_bak  README.md
Source/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Tremolo.cpp  Tremolo.h  Utils.h
Source/UI/: BigRotarySlider.cpp  BigRotarySlider.h  BypassButton.cpp  BypassButton.h  ImageSlider.cpp  ImageSlider.h  TrempolineLookAndFeel.cpp  TrempolineLookAndFeel.h  VerticalSlider.cpp  VerticalSlider.h
